codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• Waited for background terminal · cargo test -p codex-core

• Final response.
